
1.2.4:
Sam Lantinga - Thu May 16 11:26:46 PDT 2002
 * Cleaned up threading issues in the music playback code
Ryan Gordon - Thu May  2 21:08:48 PDT 2002
 * Fixed deadlock introduced in the last release

1.2.3:
Sam Lantinga - Sat Apr 13 07:49:47 PDT 2002
 * Updated autogen.sh for new versions of automake
 * Specify the SDL API calling convention (C by default)
Ryan Gordon - Sat Apr 13 07:33:37 PDT 2002
 * Fixed recursive audio lock in the mixing function
jean-julien Filatriau - Sat Mar 23 18:05:37 PST 2002
 * Fixed setting invalid volume when querying mixer and music volumes
Guillaume Cottenceau - Wed Feb 13 15:43:20 PST 2002
 * Implemented Ogg Vorbis stream rewinding
Peter Kutak - Wed Feb 13 10:26:57 PST 2002
 * Added native midi support on Linux, using GPL code
	--enable-music-native-midi-gpl
Pete Shinners - Mon Jan 14 11:31:26 PST 2002
 * Added seek support for MP3 files
Ryan Gordon - Mon Jan 14 11:30:44 PST 2002
 * Sample "finished" callbacks are now always called when a sample is stopped.

1.2.2:
Guillaume Cottenceau - Wed Dec 19 08:59:05 PST 2001
 * Added an API for seeking in music files (implemented for MOD and Ogg music)
	Mix_FadeInMusicPos(), Mix_SetMusicPosition()
 * Exposed the mikmod synchro value for music synchronization
	Mix_SetSynchroValue(), Mix_GetSynchroValue()

1.2.1:
Yi-Huang Han - Wed Oct 24 21:55:47 PDT 2001
 * Fixed MOD music volume when looping
David Hedbor - Thu Oct 18 10:01:41 PDT 2001
 * Stop implicit looping, set fade out and other flags on MOD files
Sam Lantinga - Tue Oct 16 11:17:12 PDT 2001
 * The music file type is now determined by extension as well as magic
Ryan C. Gordon - Tue Sep 11 12:05:54 PDT 2001
 * Reworked playwave.c to make it more useful as a mixer testbed
 * Added a realtime sound effect API to SDL_mixer.h
 * Added the following standard sound effects:
	panning, distance attenuation, basic positional audio, stereo reversal
 * Added API for mixer versioning: Mix_Linked_Version() and MIX_VERSION()